--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
   "singleQuote": true,
-  "semi": false
+  "semi": false,
+  "useTabs": false,
+  "tabWidth": 2,
+  "arrowParens": "always",
+  "trailingComma": "es5"
 }
