--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type": "git"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.4",
     "@types/node": "^14.0.18",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
@@ -19,12 +20,16 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.1.0",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.50",
     "typescript": "^3.9.6"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts"
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   }
 }
