--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch"
+  },
+  "alias": {
+    "@": "src/"
   }
 }
