--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^3.9.6"
   },
   "scripts": {
+    "build": "tsc",
     "dev": "ts-node-dev --respawn src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch"
