--- a/package.json
+++ b/package.json
@@ -8,24 +8,27 @@
     "name": "Yoshiturkey"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.0.18",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
-    "eslint": "^7.4.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.11.11",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.11.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.1.0",
-    "prettier": "^2.0.5",
+    "jest": "^26.6.0",
+    "prettier": "^2.1.2",
     "ts-jest": "^26.1.1",
+    "ts-loader": "^8.0.6",
     "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.50",
-    "typescript": "^3.9.6"
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^3.9.7",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0"
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "build": "webpack --mode production",
+    "dev": "ts-node-dev --respawn src/main.ts",
     "test": "jest",
     "test:watch": "jest --watch"
   },
